--- a/css/sweep.css
+++ b/css/sweep.css
@@ -1,5 +1,5 @@
 /*
- * Sweep V0.0.1 Alpha
+ * Sweep V0.1.4 Alpha
  * Copyright 2016, Anish Kasam
  * Free to use under the MIT license.
  */
@@ -12,8 +12,6 @@
     - Typography
     - Buttons
     - Links/Lists
-    - Spacing
-    - Other
 */
 
 /* Typography */
@@ -40,6 +38,11 @@ button {
     font-weight: bold;
     font-size: 20px;
     color: white;
+}
+
+p {
+    margin-left: 15%;
+    margin-right: 15%;
 }
 
 /* Buttons */
@@ -105,33 +108,11 @@ a {
 
 a:hover {
     text-decoration: none;
-    color: #2ecc71;
+    margin-left: 2.5%;
 }
 
 .inline-a {
     font-size: inherit;
-}
-
-.block-a {
-    font-size: 4vh;
-}
-
-/* Spacing */
-
-h1 {
-    margin-top: 15vh;
-}
-
-p {
-    margin-top: 7.5vh;
-    margin-left: 15%;
-    margin-right: 15%;
-}
-
-/* Other */
-
-/* Just to see the HTML since the changed color is now white */
-
-body {
-    background: black;
+    margin-left: 0;
+    color: #e74c3c;
 }
