--- a/css/sweep.css
+++ b/css/sweep.css
@@ -104,11 +104,15 @@ li {
 
 a {
     text-decoration: none;
+    -webkit-transition: .55s;
+    -moz-transition: .55s;
+    -o-transition: .55s;
+    transition: .55s;
 }
 
 a:hover {
     text-decoration: none;
-    margin-left: 1.5%;
+    margin-left: 0.5%;
 }
 
 .inline-a {
